// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem renders snapshot correctly 1`] = `
<TouchableOpacity
  disabled={false}
  onPress={[MockFunction]}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "opacity": 1,
      "position": "relative",
    }
  }
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "padding": 16,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <SvgMock
          color="#121314"
          fill="currentColor"
          height={20}
          name="Add"
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
          width={20}
        />
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Test Menu Item
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist-Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Test description
        </Text>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`MenuItem renders with different icon 1`] = `
<TouchableOpacity
  disabled={false}
  onPress={[MockFunction]}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "opacity": 1,
      "position": "relative",
    }
  }
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "padding": 16,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <SvgMock
          color="#121314"
          fill="currentColor"
          height={20}
          name="Bank"
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
          width={20}
        />
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Test Menu Item
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "Geist-Regular",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Test description
        </Text>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`MenuItem renders with empty description 1`] = `
<TouchableOpacity
  disabled={false}
  onPress={[MockFunction]}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "opacity": 1,
      "position": "relative",
    }
  }
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "padding": 16,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <SvgMock
          color="#121314"
          fill="currentColor"
          height={20}
          name="Add"
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
          width={20}
        />
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Test Menu Item
        </Text>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`MenuItem renders with title only 1`] = `
<TouchableOpacity
  disabled={false}
  onPress={[MockFunction]}
  style={
    {
      "backgroundColor": "#ffffff",
      "borderRadius": 4,
      "opacity": 1,
      "position": "relative",
    }
  }
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "padding": 16,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <SvgMock
          color="#121314"
          fill="currentColor"
          height={20}
          name="Add"
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
          width={20}
        />
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Test Menu Item
        </Text>
      </View>
    </View>
  </View>
</TouchableOpacity>
`;
